[package]
name = "rspp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rspp"
# name = "rspp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2.85"
once_cell = "1.19.0"
rustc-demangle = "0.1.24"
rustc-demangle-capi = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# log = "0.4"
# env_logger = "0.9"

# [dependencies]
# uniffi = { version = "0.28" }
# [build-dependencies]
# uniffi = { version = "0.28", features = [ "build" ] }
# wait uniffi-bindgen binary
