[package]
name = "rscp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscp"
# not "lib",
# and not cdylib for lack `pub fn` symbols, only extern symbols
crate-type = ["dylib", "staticlib"]

# keep major.minor is ok
[dependencies]
libc = "0.2"
once_cell = "1.21"
rustc-demangle = "0.1"
rustc-demangle-capi = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libfuzzer-sys = { version = "0.4", optional = true }

[features]
default = []
fuzz = ["libfuzzer-sys"]

# [dependencies]
# uniffi = { version = "0.30" }
# [build-dependencies]
# uniffi = { version = "0.30", features = [ "build" ] }
# wait uniffi-bindgen binary

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 0  # Optimize for compilation speed
lto = false  # Disabled for faster compilation
codegen-units = 1
panic = "abort"

# Fast test compilation
[profile.dev]
strip = true
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"

[workspace]
members = ["addr2linec","alpm","cparser", "curlpar", "gumbo", "neon"]
resolver = "2" # wtmin
